# bada-bing

./: CHANGELOG.md  bing.json  crontab_install.sh  enable_catlock.sh  freebsd_schema.py  granite-demo.desktop  icon  install.sh  install_metalock.py  meson.1.build  meson.build  notes.md  readme.md  readme.old.md  vala-language-server-test.json  vala-language-server.json
data/: badabing-cron  badabing.sh  com.github.darkoverlordofdata.bada-bing.appdata.xml.in  com.github.darkoverlordofdata.bada-bing.cron  com.github.darkoverlordofdata.bada-bing.desktop  com.github.darkoverlordofdata.bada-bing.desktop.in  com.github.darkoverlordofdata.bada-bing.gresource.xml  com.github.darkoverlordofdata.bada-bing.gschema.xml  com.github.darkoverlordofdata.badabing  com.github.darkoverlordofdata.badabing.desktop  com.github.darkoverlordofdata.badabing.desktop.in  com.github.darkoverlordofdata.badabing.gresource.xml  com.github.darkoverlordofdata.badabing.gschema.xml  com.github.darkoverlordofdata.badabing.mono.png~  com.github.darkoverlordofdata.badabing.py  com.github.darkoverlordofdata.badabing.py.in  com.github.darkoverlordofdata.bing-wall.appdata.xml.in  com.github.darkoverlordofdata.bing-wall.desktop.in  com.github.darkoverlordofdata.bing-wall.gresource.xml  com.github.darkoverlordofdata.bing-wall.gschema.xml  create.sql  insert.sql  meson.build  tray.py  treeview-list.ui
debian/: changelog  control  copyright
meson/: post_install.py
po/: POTFILES  com.github.darkoverlordofdata.bing-wall.pot  es.po
script/: crontab_install.sh  enable_catlock.sh  freebsd_schema.py
src/: Application.vala  BaDaBing.vala  BadaBing.vala  BingWallpaper.vala  Constants.vala  MainWindow.1.vala  MainWindow.vala  WallpaperApp.1.vala  WallpaperApp.vala  WallpaperApplication copy.vala  WallpaperApplication.vala  binger.vala  bingwallpaper
src/Data/: ImageTag.vala
src/Preferences/: AutoStart.vala  CronJob.vala  IPreference.vala  LockScreen.vala  TrayIcon.vala
src/Views/: GaleryView.vala  GalleryView.vala  PreferencesView.vala  SettingsView.vala  WelcomeView.vala
src/Views/PreferencesView/: PreferencesAppearance.vala  PreferencesGeneral copy.vala  PreferencesGeneral.vala  PreferencesInterface.vala
src/Views/SettingsView/: SettingsAutoStart.vala  SettingsIndicator.vala  SettingsInterval.vala  SettingsMinimized.vala  SettingsPage.vala  SimpleSettingsPage.vala
src/Widgets/: About.vala  Header.vala  Location.vala  Preferences.vala  Refresh.vala
src/data/: ISerialize.vala  ImageTag.vala  Serializer.vala  Wallpaper.vala  Wallpapers.vala
src/widget/: About.vala  Header.vala  Location.vala  Preferences.vala  Refresh.vala
themes/badabing/: copy.sh  metadata.mk
